@@ -29,6 +29,8 @@ BUGFIX: Fix for Fast Resume with Chinese torrents: Bug #878015 [Parg]
 BUGFIX: Fix for excess thread creation when tracker does not support single-infohash scrapes [Nolar]
 BUGFIX: Fix for hash checking 0-byte files: Bug #853126 [Nolar]
 BUGFIX: Fix for opening files via Files tab when using MoveOnComplete: Bugs #860822, #878795 [Nolar] 
+BUGFIX: Fix for 100% cpu usage after network disconnect/reconnect: Bugs #873957, #879498 [Nolar]
+
 
 
 
